--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Estilos generales */
+
 body {
     background-color: rgb(30, 76, 122);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -20,11 +22,43 @@ body {
 
 }
 
+/*Estilos cabecera */
+
 .header{
     grid-area: header;
-    border: 5px solid rgb(165, 163, 163);
-    background: #2036a0;
+    /*border: 5px solid rgb(165, 163, 163); */
+    background: white;
+    text-align: left;
+    font-style: italic;
+    display: flex;
+    justify-content: center;
+    text-size-adjust: 80%;
 }
+
+.logo{
+    background: linear-gradient(90deg, #03228f 10%, #0e73e4 100%);
+    width: 40px;
+    height: 40px;
+    border-radius: 300px;
+    margin-top: 30px;
+}
+
+.play{
+    width: 0px;
+    height: 0px;
+    margin-top: 15px;
+    margin-left: 16px;
+    border-left: 12px solid white;
+    border-top: 6px solid transparent;
+    border-bottom: 6px solid transparent;
+}
+
+.header h1{
+    margin-left: 15px;
+    margin-top: 30px;
+}
+
+/*Estilos de la barra de navegación*/
 
 .nav{
     grid-area: nav;
