--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {
     grid-area: header;
     /*border: 5px solid rgb(165, 163, 163); */
     background: white;
-    text-align: left;
+    text-align: center;
     font-style: italic;
     display: flex;
     justify-content: center;
@@ -62,9 +62,37 @@ body {
 
 .nav{
     grid-area: nav;
-    border: 5px solid rgb(165, 163, 163);
-    background: #7c8de2;
+    background: linear-gradient(90deg, #03228f 10%, #0e73e4 100%);
 }
+
+.nav > ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.nav li{
+    padding: 10px;
+}
+
+.nav a{
+    display: block;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 18px;
+    font-weight: lighter;
+    color: white;
+    text-decoration: none;
+    transition: all 300ms;
+}
+
+/* Pseudo clase del a, nav */
+.nav a:hover{
+    transform: scale(1.3, 1.3);
+}
+
+/*Estilos para el contenido principal */
 
 .content{
     grid-area: content;
