Estilos de barra lateral

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ body {
     box-shadow: 0px 0px 0px #ddd;
     margin: 20px;
     margin-left: 20px;
-    margin-right: 30px;
+    margin-right: 20px;
     padding-top: 60px;
     padding-bottom: 60px;
     padding-right: 25px;
@@ -142,11 +142,42 @@ input[type="button"]{
     background: rgb(221, 8, 8);
 }
 
+/*Estilos de barra lateral */
+
 .lateral{
     grid-area: lateral;
-    border: 5px solid rgb(165, 163, 163);
-    background: #2036a0;
+    background: rgb(190, 186, 186);
+    border-left: 1px solid #ddd;
+    padding: 20px;
 }
+
+.lateral > div{
+    box-sizing: border-box;
+    width: 90%;
+    margin: 20px;
+    padding: 20px;
+    padding-top: 10px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 6px #ddd;
+}
+
+.lateral input[type="text"],
+.lateral input[type="text"],
+.lateral textarea{
+    display: block;
+    margin: 0 auto;
+    margin-top: 15px;
+    padding: 12px;
+    border-radius: 5px;
+    background: rgb(241, 237, 237);
+    color: #454545;
+    width: 90%;
+    opacity: 4;
+    outline: 0;
+    border-color: transparent;
+}
+
 
 .footer{
     grid-area: footer;
