--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,6 @@ body {
     font-style: italic;
     display: flex;
     justify-content: center;
-    text-size-adjust: 80%;
 }
 
 .logo{
@@ -95,6 +94,7 @@ body {
 /*Estilos para el contenido principal */
 
 .content{
+    flex-grow: 1;
     grid-area: content;
     background: rgb(190, 186, 186);
     display: flex;
@@ -103,7 +103,8 @@ body {
     align-items: flex-start;
 }
 
-.peli-item{
+.receta-item{
+    flex-grow: 1;
     background: white;
     border-radius: 10px;
     box-shadow: 0px 0px 0px #ddd;
@@ -176,6 +177,11 @@ input[type="button"]{
     opacity: 4;
     outline: 0;
     border-color: transparent;
+}
+
+.edit_form{
+    border-top: 1px solid #ddd;
+    margin-top: 10px;
 }
 
 /*Estilos para el pie de página */
